--- a/PhotoShareApp/Base.lproj/Main.storyboard
+++ b/PhotoShareApp/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,37 +17,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email giriniz" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8VX-hn-16M">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8VX-hn-16M">
                                 <rect key="frame" x="55" y="170" width="282" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="sifre giriniz" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="alh-7N-GBM">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="alh-7N-GBM">
                                 <rect key="frame" x="55" y="212" width="282" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Photo Share App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ilK-Mk-ttl">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photo Share App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ilK-Mk-ttl">
                                 <rect key="frame" x="84" y="74" width="225" height="75"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="CW5-bU-thW"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fc9-A7-DlR">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fc9-A7-DlR">
                                 <rect key="frame" x="55" y="270" width="97" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="Unr-7p-6bA"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Login"/>
                                 <connections>
                                     <action selector="loginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NBU-cb-mK6"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bBM-UX-iMi">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bBM-UX-iMi">
                                 <rect key="frame" x="240" y="270" width="97" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Register"/>
                                 <connections>
@@ -56,6 +58,22 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ilK-Mk-ttl" firstAttribute="centerX" secondItem="8VX-hn-16M" secondAttribute="centerX" id="1yW-VN-wgu"/>
+                            <constraint firstItem="alh-7N-GBM" firstAttribute="trailing" secondItem="bBM-UX-iMi" secondAttribute="trailing" id="6lL-So-Vrf"/>
+                            <constraint firstItem="8VX-hn-16M" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="55" id="8c1-vk-Qc1"/>
+                            <constraint firstItem="ilK-Mk-ttl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="84" id="B0X-w4-gbs"/>
+                            <constraint firstItem="bBM-UX-iMi" firstAttribute="leading" secondItem="Fc9-A7-DlR" secondAttribute="trailing" constant="88" id="E46-Vy-ml7"/>
+                            <constraint firstItem="8VX-hn-16M" firstAttribute="top" secondItem="ilK-Mk-ttl" secondAttribute="bottom" constant="21" id="UZg-wM-a1E"/>
+                            <constraint firstItem="8VX-hn-16M" firstAttribute="leading" secondItem="alh-7N-GBM" secondAttribute="leading" id="X3P-Ry-Pop"/>
+                            <constraint firstItem="8VX-hn-16M" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="aJG-vo-MKs"/>
+                            <constraint firstItem="alh-7N-GBM" firstAttribute="leading" secondItem="Fc9-A7-DlR" secondAttribute="leading" id="jkN-yp-Wls"/>
+                            <constraint firstItem="Fc9-A7-DlR" firstAttribute="top" secondItem="alh-7N-GBM" secondAttribute="bottom" constant="24" id="p46-ir-PEb"/>
+                            <constraint firstItem="8VX-hn-16M" firstAttribute="trailing" secondItem="alh-7N-GBM" secondAttribute="trailing" id="rh2-Tj-jbL"/>
+                            <constraint firstItem="ilK-Mk-ttl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="tzB-Be-f86"/>
+                            <constraint firstItem="alh-7N-GBM" firstAttribute="top" secondItem="8VX-hn-16M" secondAttribute="bottom" constant="8" id="vFP-dJ-wda"/>
+                            <constraint firstItem="Fc9-A7-DlR" firstAttribute="baseline" secondItem="bBM-UX-iMi" secondAttribute="baseline" id="xmN-Bc-lLy"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="emailTextField" destination="8VX-hn-16M" id="HGc-fK-cxx"/>
@@ -67,7 +85,7 @@
             </objects>
             <point key="canvasLocation" x="-698.47328244274809" y="-206.33802816901411"/>
         </scene>
-        <!--Item 2-->
+        <!--Upload-->
         <scene sceneID="lfs-hQ-PAr">
             <objects>
                 <viewController id="lmU-fg-sjE" customClass="UploadViewController" customModule="PhotoShareApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -77,7 +95,9 @@
                         <viewLayoutGuide key="safeArea" id="zsZ-hK-Hvd"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="JUK-RJ-RoK"/>
+                    <tabBarItem key="tabBarItem" title="Upload" id="JUK-RJ-RoK">
+                        <imageReference key="image" image="square.and.arrow.down.fill" catalog="system" symbolScale="default"/>
+                    </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z1W-LL-owX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -107,7 +127,9 @@
                             <constraint firstItem="bSv-1c-LHW" firstAttribute="centerY" secondItem="4L9-0V-Urm" secondAttribute="centerY" id="SmG-on-9i4"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Settings" id="nO2-Hw-82n"/>
+                    <tabBarItem key="tabBarItem" title="Settings" id="nO2-Hw-82n">
+                        <imageReference key="image" image="list.bullet.rectangle.portrait.fill" catalog="system" symbolScale="default"/>
+                    </tabBarItem>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="presentation" identifier="toViewController" modalPresentationStyle="fullScreen" id="nOv-cZ-cyn"/>
                     </connections>
@@ -116,21 +138,63 @@
             </objects>
             <point key="canvasLocation" x="1136.6412213740457" y="737.32394366197184"/>
         </scene>
-        <!--Item 1-->
+        <!--Feed-->
         <scene sceneID="waQ-l5-8TG">
             <objects>
                 <viewController id="5MU-Vy-MX2" customClass="FeedViewController" customModule="PhotoShareApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5Tr-cG-0Ec">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Choose a Photo" translatesAutoresizingMaskIntoConstraints="NO" id="hpe-G3-ckX">
+                                <rect key="frame" x="46" y="125" width="301" height="203"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter comment" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CMX-cr-dQr">
+                                <rect key="frame" x="55" y="362" width="282" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="dVD-9s-2Nq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WH6-9T-DRs">
+                                <rect key="frame" x="111" y="420" width="170" height="66"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="66" id="Ym0-s7-prf"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Upload"/>
+                                <connections>
+                                    <action selector="uploadButton:" destination="5MU-Vy-MX2" eventType="touchUpInside" id="PyX-sg-0Gy"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="w7I-8Z-Rzo"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="WH6-9T-DRs" firstAttribute="leading" secondItem="w7I-8Z-Rzo" secondAttribute="leading" constant="111" id="4c0-ef-b4W"/>
+                            <constraint firstItem="hpe-G3-ckX" firstAttribute="centerX" secondItem="CMX-cr-dQr" secondAttribute="centerX" id="6l6-AI-Rsf"/>
+                            <constraint firstItem="hpe-G3-ckX" firstAttribute="top" secondItem="w7I-8Z-Rzo" secondAttribute="top" constant="66" id="ASx-br-veO"/>
+                            <constraint firstItem="CMX-cr-dQr" firstAttribute="centerX" secondItem="WH6-9T-DRs" secondAttribute="centerX" id="Cha-n8-kuZ"/>
+                            <constraint firstItem="CMX-cr-dQr" firstAttribute="top" secondItem="hpe-G3-ckX" secondAttribute="bottom" constant="34" id="Fb5-mf-KGc"/>
+                            <constraint firstItem="CMX-cr-dQr" firstAttribute="leading" secondItem="w7I-8Z-Rzo" secondAttribute="leading" constant="55" id="OJD-Nn-if4"/>
+                            <constraint firstItem="w7I-8Z-Rzo" firstAttribute="bottom" secondItem="WH6-9T-DRs" secondAttribute="bottom" constant="283" id="aOj-MP-xaz"/>
+                            <constraint firstItem="WH6-9T-DRs" firstAttribute="top" secondItem="CMX-cr-dQr" secondAttribute="bottom" constant="24" id="n0E-9w-0QB"/>
+                            <constraint firstItem="hpe-G3-ckX" firstAttribute="leading" secondItem="w7I-8Z-Rzo" secondAttribute="leading" constant="46" id="pMH-WN-712"/>
+                            <constraint firstItem="CMX-cr-dQr" firstAttribute="centerX" secondItem="5Tr-cG-0Ec" secondAttribute="centerX" id="vBJ-ZF-5Qm"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="v9Z-NU-PqA"/>
+                    <tabBarItem key="tabBarItem" title="Feed" id="v9Z-NU-PqA">
+                        <imageReference key="image" image="graduationcap.fill" catalog="system" symbolScale="default"/>
+                    </tabBarItem>
+                    <connections>
+                        <outlet property="commentTextField" destination="CMX-cr-dQr" id="mwW-1m-ei7"/>
+                        <outlet property="imageView" destination="hpe-G3-ckX" id="yyH-XM-SAF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q4h-MO-2VZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1138" y="-553"/>
+            <point key="canvasLocation" x="1136.6412213740457" y="-553.52112676056345"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="mBu-fi-Q7g">
@@ -140,7 +204,7 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QgW-cB-tfT">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemFillColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="5MU-Vy-MX2" kind="relationship" relationship="viewControllers" id="BcD-hX-1Nr"/>
@@ -154,8 +218,15 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Choose a Photo" width="1004" height="702"/>
+        <image name="graduationcap.fill" catalog="system" width="128" height="108"/>
+        <image name="list.bullet.rectangle.portrait.fill" catalog="system" width="115" height="128"/>
+        <image name="square.and.arrow.down.fill" catalog="system" width="121" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemFillColor">
+            <color red="0.47058823529411764" green="0.47058823529411764" blue="0.50196078431372548" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
